[package]
name = "flightpath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
fasthash = "0.4.0"

[dev-dependencies]
rand = "0.8"
serde = "1.0.142"
serde_json = "1.0.83"
